--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
           rel="noopener noreferrer">SQLite</a> extension that adds UUID
           functions like <code>uuid1()</code> and <code>uuid4()</code>.
           </dd>
-          <dt><a href="https://benwebber.github.io/tiddlywiki-dnd/"
-          rel="noopener noreferrer">tiddlywiki-dnd</a></dt>
+          <dt><a
+          href="https://benwebber.github.io/tiddlywiki-dnd/">tiddlywiki-dnd</a></dt>
           <dd>
           A <a href="https://tiddlywiki.com/"
           rel="noopener noreferrer">TiddlyWiki</a> plugin for managing a
@@ -49,9 +49,9 @@
           A collection of small, minimalist plugins for <a
           href="https://tiddlywiki.com/"
           rel="noopener noreferrer">TiddlyWiki</a>. Includes <a
-          href="https://benwebber.github.io/tiddlywiki-plugins/#motion:tiddlywiki-plugins%20motion"
-          rel="noopener noreferrer">motion</a>, a plugin to navigate
-          your wiki with Vim-like keyboard shortcuts.
+          href="https://benwebber.github.io/tiddlywiki-plugins/#motion:tiddlywiki-plugins%20motion">motion</a>,
+          a plugin to navigate your wiki with Vim-like keyboard
+          shortcuts.
           </dd>
           </dl>
         </article>
@@ -59,4 +59,4 @@
     </div>
   </body>
 </html>
-<!-- 82846c9 -->
+<!-- b4653ce -->
